# itmo-fp-homeworks

./: .gitignore  README.md  stack.yaml
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw0/test/: Task4Spec.hs  Task5Spec.hs  Task7Spec.hs
hw1/: hw1.cabal
hw1-second-chance/: hw1-second-chance.cabal
hw1-second-chance/src/Block6/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1-second-chance/test/Block6/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs
hw1/test/Block1/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
hw1/test/Block2/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block3/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block4/: Task1Spec.hs
hw1/test/Block5/: Task1Spec.hs
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/: CVS.hs  CVSCommands.hs  CVSCore.hs  File.hs  Filesystem.hs  FilesystemCommands.hs  FilesystemCore.hs  FilesystemDumper.hs  FilesystemLoader.hs  Path.hs  Utils.hs
hw2/test/: CVSCoreSpec.hs  CVSSpec.hs  FileSystemSpec.hs  FilesystemCoreSpec.hs  TestUtils.hs
hw3/: .gitignore  hw3.cabal
hw3/app/: Main.hs  Task1App.hs  Task8App.hs
hw3/src/: Task1.hs  Task6.hs  Task7.hs
hw3/src/Task5/: FS.hs  FilesystemLoader.hs  Path.hs  Practice.hs
hw3/src/Task8/: Cell.hs  Constants.hs  Grid.hs  ListZipper.hs  Simulation.hs
hw3/test/: FSMock.hs  Task6Spec.hs  Task7Spec.hs  Task8Spec.hs
hw3/test/Task5/: FilesystemLoaderSpec.hs  PracticeSpec.hs
practice2/: practice2.cabal
practice2/app/: Main.hs
practice2/test/: MainSpec.hs
practice3/: practice3.cabal
practice3/src/: Task1.hs  Task10.hs  Task11.hs  Task12.hs  Task13.hs  Task14.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs  Task9.hs
practice3/test/: Task12Spec.hs  Task3Spec.hs  Task6Spec.hs
