name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6.Task1
                     , Block6.Task2
                     , Block6.Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010


test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Block6.Task2Spec
                     , Block6.Task3Spec
  main-is:             Spec.hs
  build-depends:       base
                     , hw1-second-chance
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
