name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Path
                     , File
                     , Utils
                     , Filesystem
                     , FilesystemLoader
                     , FilesystemDumper
                     , FilesystemCommands
                     , CVS
                     , CVSCommands
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , exceptions
                     , directory
                     , transformers
                     , bytestring
                     , time
                     , Diff
                     , SHA
                     , aeson
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
                     , optparse-applicative
                     , mtl
                     , exceptions
                     , bytestring
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       FileSystemSpec, TestUtils, CVSSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hw2
                     , hspec
                     , mtl
                     , exceptions
                     , bytestring
                     , time
                     , QuickCheck
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010