name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task5.FS
                     , Task5.Practice
                     , Task5.FilesystemLoader
                     , Task5.Path
                     , Task6
                     , Task7
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , microlens
                     , mtl
                     , directory
                     , transformers
  default-language:    Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , criterion
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Task5.PracticeSpec
                     , Task5.FilesystemLoaderSpec
                     , Task6Spec
                     , Task7Spec
  build-depends:       base
                     , hw3
                     , hspec
                     , microlens
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
