name:                practice3
version:             0.1.0.0
synopsis:            Template for practice 3
description:         Practice 3 for FP ITMO course

homepage:            https://github.com/fp-homework/tree/master/practice3#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
                     , Task4
                     , Task5
                     , Task6
                     , Task7
                     , Task8
                     , Task9
                     , Task10
                     , Task11
                     , Task12
                     , Task13
                     , Task14
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite practice3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Task3Spec, Task6Spec, Task12Spec
  main-is:             Spec.hs
  build-depends:       base
                     , practice3
                     , hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
